--- a/theme/visual-studio.css
+++ b/theme/visual-studio.css
@@ -4,12 +4,6 @@
 	color:black;
 }
 
-.cm-s-visual-studio.CodeMirror pre
-{
-	line-height: 1em;
-	padding: 0px;
-}
-
 .cm-s-visual-studio.CodeMirror .CodeMirror-cursor
 {
 	z-index: 5;
@@ -17,7 +11,6 @@
 
 .cm-s-visual-studio.CodeMirror .CodeMirror-lines pre
 {
-	border: 2px solid transparent;
 }
 
 .cm-s-visual-studio.CodeMirror .CodeMirror-gutters
@@ -34,7 +27,6 @@
 .cm-s-visual-studio.CodeMirror .CodeMirror-matchingbracket
 {
 	color: black;
-	/*border: 1px #dddddd solid;*/
 	background-color: #dedede;
 }
 
